--- a/centos7-dev/bin/docker-runner.conf
+++ b/centos7-dev/bin/docker-runner.conf
@@ -2,25 +2,25 @@
 ## docker images, storage, dockerfiles, dependent services
 ##
 [storages]
-centos6_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
-#centos6_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
-centos6_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
-centos6_phpdata         phpdata53       Dockerfile-php-storage          php53
-centos6_phpdata         phpdata54       Dockerfile-php-storage          php54
-centos6_phpdata         phpdata55       Dockerfile-php-storage          php55
-centos6_phpdata         phpdata56       Dockerfile-php-storage          php56
+centos7dev_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
+#centos7dev_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
+centos7dev_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
+centos7dev_phpdata         phpdata53       Dockerfile-php-storage          php53
+centos7dev_phpdata         phpdata54       Dockerfile-php-storage          php54
+centos7dev_phpdata         phpdata55       Dockerfile-php-storage          php55
+centos7dev_phpdata         phpdata56       Dockerfile-php-storage          php56
 
 ##
 ## service images, services, docker-compose yaml filenames
 ##
 [services]
-centos6_mysql56      mysql56      docker-compose-mysql56.yml
-#centos6_pgsql92      pgsql92      docker-compose-pgsql92.yml
-centos6_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
-centos6_php53        php53        docker-compose-apache22-php53.yml
-centos6_php54        php54        docker-compose-apache22-php54.yml
-centos6_php55        php55        docker-compose-apache22-php55.yml
-centos6_php56        php56        docker-compose-apache22-php56.yml
+centos7dev_mysql56      mysql56      docker-compose-mysql56.yml
+#centos7dev_pgsql92      pgsql92      docker-compose-pgsql92.yml
+centos7dev_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
+centos7dev_php53        php53        docker-compose-apache22-php53.yml
+centos7dev_php54        php54        docker-compose-apache22-php54.yml
+centos7dev_php55        php55        docker-compose-apache22-php55.yml
+centos7dev_php56        php56        docker-compose-apache22-php56.yml
 
 ##
 ## services and dependent services
