fix bug: docker-runner.conf functions.sh docker-runner.sh - delete php53 from centos7, centos7-dev config - remove project name dependency in config

--- a/centos7/bin/docker-runner.conf
+++ b/centos7/bin/docker-runner.conf
@@ -1,34 +1,33 @@
 ##
 ## docker images, storage, dockerfiles, dependent services
+## @@DOCKER_IMAGE_PROJECT@@ will be replaced by $DOCKER_IMAGE_PROJECT(project name for docker-compose)
 ##
 [storages]
-centos7_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
-#centos7_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
-centos7_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
-centos7_phpdata         phpdata53       Dockerfile-php-storage          php53
-centos7_phpdata         phpdata54       Dockerfile-php-storage          php54
-centos7_phpdata         phpdata55       Dockerfile-php-storage          php55
-centos7_phpdata         phpdata56       Dockerfile-php-storage          php56
+@@DOCKER_IMAGE_PROJECT@@_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
+#@@DOCKER_IMAGE_PROJECT@@_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
+@@DOCKER_IMAGE_PROJECT@@_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata54       Dockerfile-php-storage          php54
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata55       Dockerfile-php-storage          php55
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata56       Dockerfile-php-storage          php56
 
 ##
 ## service images, services, docker-compose yaml filenames
+## @@DOCKER_IMAGE_PROJECT@@ will be replaced by $DOCKER_IMAGE_PROJECT(project name for docker-compose)
 ##
 [services]
-centos7_mysql56      mysql56      docker-compose-mysql56.yml
-#centos7_pgsql92      pgsql92      docker-compose-pgsql92.yml
-centos7_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
-centos7_php53        php53        docker-compose-apache22-php53.yml
-centos7_php54        php54        docker-compose-apache22-php54.yml
-centos7_php55        php55        docker-compose-apache22-php55.yml
-centos7_php56        php56        docker-compose-apache22-php56.yml
+@@DOCKER_IMAGE_PROJECT@@_mysql56      mysql56      docker-compose-mysql56.yml
+#@@DOCKER_IMAGE_PROJECT@@_pgsql92      pgsql92      docker-compose-pgsql92.yml
+@@DOCKER_IMAGE_PROJECT@@_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
+@@DOCKER_IMAGE_PROJECT@@_php54        php54        docker-compose-apache24-php54.yml
+@@DOCKER_IMAGE_PROJECT@@_php55        php55        docker-compose-apache24-php55.yml
+@@DOCKER_IMAGE_PROJECT@@_php56        php56        docker-compose-apache24-php56.yml
 
 ##
 ## services and dependent services
 ##
 [dependent services]
 tomcat7      mysql56
-#php53        pgsql92
-php53        mysql56
+#php54        pgsql92
 php54        mysql56
 php55        mysql56
 php56        mysql56
@@ -52,7 +51,7 @@ apache
 
 ##
 ## shared directories with host and docker
-## "@@PROJECT@@" will be replaced by %PROJECT%(project name)
+## @@PROJECT@@ will be replaced by %PROJECT%(project name)
 ##
 [shared]
 docker-entrypoint-init.d    @@DOCKER_RUNNER_PATH@@\@@PROJECT@@\build\docker-entrypoint-init.d     1
