--- a/centos6/bin/docker-runner.conf
+++ b/centos6/bin/docker-runner.conf
@@ -1,26 +1,28 @@
 ##
 ## docker images, storage, dockerfiles, dependent services
+## @@DOCKER_IMAGE_PROJECT@@ will be replaced by $DOCKER_IMAGE_PROJECT(project name for docker-compose)
 ##
 [storages]
-centos6_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
-#centos6_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
-centos6_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
-centos6_phpdata         phpdata53       Dockerfile-php-storage          php53
-centos6_phpdata         phpdata54       Dockerfile-php-storage          php54
-centos6_phpdata         phpdata55       Dockerfile-php-storage          php55
-centos6_phpdata         phpdata56       Dockerfile-php-storage          php56
+@@DOCKER_IMAGE_PROJECT@@_mysqldb         mysqldb56       Dockerfile-mysql-storage        mysql56
+#@@DOCKER_IMAGE_PROJECT@@_pgsqldb         pgsqldb92       Dockerfile-pgsql-storage        pgsql92
+@@DOCKER_IMAGE_PROJECT@@_tomcatdata      tomcatdata7     Dockerfile-tomcat7-storage      tomcat7
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata53       Dockerfile-php-storage          php53
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata54       Dockerfile-php-storage          php54
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata55       Dockerfile-php-storage          php55
+@@DOCKER_IMAGE_PROJECT@@_phpdata         phpdata56       Dockerfile-php-storage          php56
 
 ##
 ## service images, services, docker-compose yaml filenames
+## @@DOCKER_IMAGE_PROJECT@@ will be replaced by $DOCKER_IMAGE_PROJECT(project name for docker-compose)
 ##
 [services]
-centos6_mysql56      mysql56      docker-compose-mysql56.yml
-#centos6_pgsql92      pgsql92      docker-compose-pgsql92.yml
-centos6_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
-centos6_php53        php53        docker-compose-apache22-php53.yml
-centos6_php54        php54        docker-compose-apache22-php54.yml
-centos6_php55        php55        docker-compose-apache22-php55.yml
-centos6_php56        php56        docker-compose-apache22-php56.yml
+@@DOCKER_IMAGE_PROJECT@@_mysql56      mysql56      docker-compose-mysql56.yml
+#@@DOCKER_IMAGE_PROJECT@@_pgsql92      pgsql92      docker-compose-pgsql92.yml
+@@DOCKER_IMAGE_PROJECT@@_tomcat7      tomcat7      docker-compose-tomcat7-jdk.yml
+@@DOCKER_IMAGE_PROJECT@@_php53        php53        docker-compose-apache22-php53.yml
+@@DOCKER_IMAGE_PROJECT@@_php54        php54        docker-compose-apache22-php54.yml
+@@DOCKER_IMAGE_PROJECT@@_php55        php55        docker-compose-apache22-php55.yml
+@@DOCKER_IMAGE_PROJECT@@_php56        php56        docker-compose-apache22-php56.yml
 
 ##
 ## services and dependent services
@@ -52,7 +54,7 @@ apache
 
 ##
 ## shared directories with host and docker
-## "@@PROJECT@@" will be replaced by %PROJECT%(project name)
+## @@PROJECT@@ will be replaced by %PROJECT%(project name)
 ##
 [shared]
 docker-entrypoint-init.d    @@DOCKER_RUNNER_PATH@@\@@PROJECT@@\build\docker-entrypoint-init.d     1
